Stop footer text wrapping
Relates #41

--- a/src/scss/_footer.scss
+++ b/src/scss/_footer.scss
@@ -5,6 +5,7 @@
   color: $white;
   background-color: $secondary;
   &__copy {
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
